--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,6 +5,42 @@ header {
     background-size: cover;
     height: 1005px;
 
+    position: relative;
+    padding-bottom: 10px;
+    padding-top: 10px;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(to right, #00E0FF, #4AD9EC, #00E0FF);
+        box-shadow:
+            0 3px 15px rgba(0, 224, 255, 0.93),
+            0 4px 15px rgba(74, 217, 236, 1),
+            0 0px 24px rgba(0, 224, 255, 1);
+        pointer-events: none;
+        filter: blur(2px);
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(to right, #00E0FF, #4AD9EC, #00E0FF);
+        box-shadow:
+            0 3px 15px rgba(0, 224, 255, 0.93),
+            0 4px 15px rgba(74, 217, 236, 1),
+            0 0px 24px rgba(0, 224, 255, 1);
+        pointer-events: none;
+        filter: blur(2px);
+    }
+
     .header_logo_phone {
         display: flex;
         justify-content: space-between;
@@ -67,9 +103,47 @@ header {
 
                 p {
                     padding-top: 0;
+                    font-weight: 500;
+                    font-size: 18px;
+                    color: white;
+                }
+                .turquoise {
+                    padding-top: 14px;
+                    font-weight: 500;
+                    font-size: 18px;
+                    color: turquoise;
                 }
 
             }
         }
+        .header_button {
+            margin-top: 101px;
+            button {
+                width: 479px;
+                height: 60px;
+                font-size: 12px;
+                color: white;
+                text-transform: uppercase;
+                font-weight: 700;
+                letter-spacing: 2.5px;
+                background: linear-gradient(
+                    180deg,
+                    #03E1FF 66%,
+                    #13CDC2 100%
+                );
+                box-shadow: 7px 0px 20px -7px #00E0FF;
+                border: none;
+                border-radius: 8px;
+                cursor: pointer;
+                transition: all 1s;
+
+                &:hover {
+                    transition: all 1s;
+                    transform: translateY(-5px);
+                    box-shadow: 10px 0px 30px -5px #00E0FF;
+                }
+            }
+        }
     }
+
 }
