feat: finished reasons block and started important block

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,4 +2,5 @@
 @import "_main_settings";
 @import "_header";
 @import "_veriables";
-@import "_reasons"
+@import "_reasons";
+@import "_important";
