--- a/scss/_reasons.scss
+++ b/scss/_reasons.scss
@@ -1,6 +1,42 @@
 .reasons {
     background: linear-gradient(to right, #022335 0%, #0C373D 100%);
     padding-top: 125px;
+    height: 881px;
+    position: relative;
+    padding-bottom: 10px;
+
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(to right, #00E0FF, #4AD9EC, #00E0FF);
+        box-shadow:
+            0 3px 15px rgba(0, 224, 255, 0.93),
+             0 4px 15px rgba(74, 217, 236, 1),
+             0 0px 24px rgba(0, 224, 255, 1);
+        pointer-events: none;
+        filter: blur(2px);
+            }
+
+    &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(to right, #00E0FF, #4AD9EC, #00E0FF);
+        box-shadow:
+            0 3px 15px rgba(0, 224, 255, 0.93),
+            0 4px 15px rgba(74, 217, 236, 1),
+            0 0px 24px rgba(0, 224, 255, 1);
+        pointer-events: none;
+        filter: blur(2px);
+    }
 
     .container {
         h2 {
@@ -23,12 +59,18 @@
                 .card_first_line {
                     position: relative;
                     width: 23.7%;
-                      background: linear-gradient(to right, rgba(31, 77, 96, 0) 0%, rgba(31, 77, 96, 0.43) 100%);
+                    height: 212px;
+                    background: linear-gradient(to right, rgba(31, 77, 96, 0) 0%, rgba(31, 77, 96, 0.43) 100%);
                     border-radius: 20px;
+                    margin-top: 58px;
+                    transition: all 1s;
 
-                    &:last-child {
-                        margin-right: 1%;
+                    &:hover {
+                        transition: all 1s;
+                        transform: translateY(-5px);
+                        box-shadow: 5px 5px 30px 10px #00E0FF;
                     }
+
                     &:before {
                         content: "";
                         position: absolute;
@@ -48,8 +90,66 @@
                         pointer-events: none;
                         z-index: 1;
                     }
+                    img {
+                        padding: 36px 0 15px 42px ;
+                    }
+                    .reasons_text {
+                        padding-left: 42px;
+                        color: white;
+                        font-size: 15px;
+                        font-weight: 500;
+                    }
                 }
             }
+            .reasons_cards_second_line {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-top: 20px;
+
+                    .cards_second_line {
+                        position: relative;
+                        width: 32%;
+                        height: 212px;
+                        background: linear-gradient(to right, rgba(31, 77, 96, 0) 0%, rgba(31, 77, 96, 0.43) 100%);
+                        border-radius: 20px;
+                        transition: all 1s;
+
+                        &:hover {
+                            transition: all 1s;
+                            transform: translateY(-5px);
+                            box-shadow: 5px 5px 30px 10px #00E0FF;
+                        }
+
+                        &:before {
+                            content: "";
+                            position: absolute;
+                            inset: 0;
+                            padding: 2px;
+                            border-radius: 20px;
+                            background: linear-gradient(to right,
+                                rgba(73, 185, 232, 1) 0%,
+                                rgba(31, 77, 96, 0.43) 100%);
+
+                            -webkit-mask:
+                                linear-gradient(#fff 0 0) content-box,
+                                linear-gradient(#fff 0 0);
+                            -webkit-mask-composite: xor;
+                            mask-composite: exclude;
+
+                            pointer-events: none;
+                            z-index: 1;
+                        }
+                        img {
+                            padding: 36px 0 15px 42px ;
+                        }
+                        .reasons_text {
+                            padding-left: 42px;
+                            color: white;
+                            font-size: 15px;
+                            font-weight: 500;
+                        }
+                    }
+                }
         }
     }
 }
