feat: started intellegence block

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "_fonts";
 @import "_main_settings";
-@import "_header";
 @import "_veriables";
-@import "_reasons";
-@import "_important";
+@import "_header_block";
+@import "_reasons_block";
+@import "_important_block";
+@import "_intellegence_block";
