--- a/scss/_important_block.scss
+++ b/scss/_important_block.scss
@@ -1,8 +1,24 @@
 .important {
+    position: relative;
     background: linear-gradient(to right, #022335 0%, #0C373D 100%);
     padding-top: 125px;
     height: 809px;
 
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(to right, #00E0FF, #4AD9EC, #00E0FF);
+        box-shadow:
+            0 3px 15px rgba(0, 224, 255, 0.93),
+            0 4px 15px rgba(74, 217, 236, 1),
+            0 0px 24px rgba(0, 224, 255, 1);
+        pointer-events: none;
+        filter: blur(2px);
+    }
     .container {
         h2 {
             text-transform: uppercase;
