feat: finished courses block and added mixin for all blocks

--- a/scss/_important_block.scss
+++ b/scss/_important_block.scss
@@ -2,7 +2,7 @@
     position: relative;
     background: linear-gradient(to right, #022335 0%, #0C373D 100%);
     padding-top: 105px;
-    height: 809px;
+    padding-bottom: 129px;
 
     &::before {
         content: '';
@@ -24,10 +24,10 @@
             text-transform: uppercase;
             font-size: 54px;
             font-weight: 500;
-            color: white;
+            color: $white;
 
             span {
-                color: turquoise;
+                color: $turquoise;
                 text-transform: uppercase;
                 font-size: 54px;
                 font-weight: 500;
@@ -49,9 +49,7 @@
                     .info_text {
                         padding-left: 20px;
                         padding-top: 38px;
-                        color: white;
-                        line-height: 23px;
-                        font-weight: 500;
+                        @include importantText;
                     }
                 }
             }
@@ -75,7 +73,7 @@
                         color: white;
                         line-height: 23px;
                         padding-right: 20px;
-                        font-weight: 500;
+                        @include importantText;
                     }
                 }
 
