--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "_fonts";
+@import "_mixin";
 @import "_main_settings";
 @import "_veriables";
 @import "_header_block";
@@ -6,3 +7,4 @@
 @import "_important_block";
 @import "_intellegence_block";
 @import "_learning_block";
+@import "_courses_block";
