--- a/scss/_header_block.scss
+++ b/scss/_header_block.scss
@@ -42,7 +42,7 @@ header {
                 height: 25px;
             }
             a {
-                color: white;
+                color: $white;
                 font-weight: 500;
                 font-size: 18px;
                 cursor: pointer;
@@ -53,7 +53,7 @@ header {
         padding-top: 155px;
 
         h3 {
-            color: gray;
+            color: $gray;
             font-weight: 600;
             font-size: 18px;
         }
@@ -73,7 +73,7 @@ header {
             padding-top: 18px;
             font-weight: 500;
             font-size: 18px;
-            color: white;
+            color: $white;
         }
         .header_info_courses {
             display: flex;
@@ -90,13 +90,7 @@ header {
                     padding-top: 0;
                     font-weight: 500;
                     font-size: 18px;
-                    color: white;
-                }
-                .turquoise {
-                    padding-top: 14px;
-                    font-weight: 500;
-                    font-size: 18px;
-                    color: turquoise;
+                    color: $turquoise;
                 }
 
             }
@@ -104,29 +98,7 @@ header {
         .header_button {
             margin-top: 101px;
             button {
-                width: 479px;
-                height: 60px;
-                font-size: 12px;
-                color: white;
-                text-transform: uppercase;
-                font-weight: 700;
-                letter-spacing: 2.5px;
-                background: linear-gradient(
-                    180deg,
-                    #03E1FF 66%,
-                    #13CDC2 100%
-                );
-                box-shadow: 7px 0px 20px -7px #00E0FF;
-                border: none;
-                border-radius: 8px;
-                cursor: pointer;
-                transition: all 1s;
-
-                &:hover {
-                    transition: all 1s;
-                    transform: translateY(-5px);
-                    box-shadow: 10px 0px 30px -5px #00E0FF;
-                }
+                @include mainButton;
             }
         }
     }
