--- a/scss/_learning_block.scss
+++ b/scss/_learning_block.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 891px;
+    padding-bottom: 112px;
     padding-top: 105px;
 
     &::before {
@@ -28,9 +28,9 @@
                 text-transform: uppercase;
                 font-size: 54px;
                 font-weight: 500;
-                color: white;
+                color: $white;
                 span {
-                    color: turquoise;
+                    color: $turquoise;
                     text-transform: uppercase;
                     font-size: 54px;
                     font-weight: 500;
@@ -49,9 +49,7 @@
                         }
                         .inner_info_text {
                             padding-top: 11px;
-                            color: white;
-                            line-height: 23px;
-                            font-weight: 500;
+                            @include learningText;
                         }
                         .learning_ellipse {
                             position: absolute;
@@ -73,9 +71,7 @@
                         }
                         .inner_info_text {
                             padding-top: 11px;
-                            color: white;
-                            line-height: 23px;
-                            font-weight: 500;
+                            @include learningText;
                         }
                         .learning_ellipse {
                             position: absolute;
@@ -97,9 +93,7 @@
                         }
                         .inner_info_text {
                             padding-top: 11px;
-                            color: white;
-                            line-height: 23px;
-                            font-weight: 500;
+                            @include learningText;
                         }
                         .learning_ellipse {
                             position: absolute;
@@ -121,9 +115,7 @@
                         }
                         .inner_info_text {
                             padding-top: 11px;
-                            color: white;
-                            line-height: 23px;
-                            font-weight: 500;
+                            @include learningText;
                         }
                         .learning_ellipse {
                             position: absolute;
@@ -145,9 +137,7 @@
                         }
                         .inner_info_text {
                             margin-top: 11px;
-                            color: white;
-                            line-height: 23px;
-                            font-weight: 500;
+                            @include learningText;
                         }
                         .learning_ellipse {
                             position: absolute;
@@ -161,29 +151,7 @@
             .learning_button {
                 button {
                     margin-top: 53px;
-                    width: 479px;
-                    height: 60px;
-                    font-size: 12px;
-                    color: white;
-                    text-transform: uppercase;
-                    font-weight: 700;
-                    letter-spacing: 2.5px;
-                    background: linear-gradient(
-                        180deg,
-                        #03E1FF 66%,
-                        #13CDC2 100%
-                    );
-                    box-shadow: 7px 0px 20px -7px #00E0FF;
-                    border: none;
-                    border-radius: 8px;
-                    cursor: pointer;
-                    transition: all 1s;
-
-                    &:hover {
-                        transition: all 1s;
-                        transform: translateY(-5px);
-                        box-shadow: 10px 0px 30px -5px #00E0FF;
-                    }
+                    @include mainButton;
                 }
             }
         }
