--- a/scss/_reasons_block.scss
+++ b/scss/_reasons_block.scss
@@ -43,7 +43,7 @@
             text-transform: uppercase;
             font-size: 54px;
             font-weight: 500;
-            color: white;
+            color: $white;
 
             span {
                 color: turquoise;
@@ -95,9 +95,7 @@
                     }
                     .reasons_text {
                         padding-left: 42px;
-                        color: white;
-                        font-size: 15px;
-                        font-weight: 500;
+                        @include reasonsText;
                     }
                 }
             }
@@ -144,9 +142,7 @@
                         }
                         .reasons_text {
                             padding-left: 42px;
-                            color: white;
-                            font-size: 15px;
-                            font-weight: 500;
+                            @include reasonsText;
                         }
                     }
                 }
