--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,3 +9,5 @@
 @import "_learning_block";
 @import "_courses_block";
 @import "_course_autor";
+@import "_school_announcements";
+@import "_vacancies";
