--- a/scss/_courses_block.scss
+++ b/scss/_courses_block.scss
@@ -50,6 +50,7 @@
                 img {
                     padding-top: 8px;
                     padding-left: 16px;
+                    transition: transform 0.4s ease;
                 }
                 h3 {
                     margin-left: 16px;
@@ -63,15 +64,30 @@
                     color: #08B1B9;
                     font-weight: 500;
                 }
-                button {
+                .button_courses {
                     background-color: transparent;
                     border: none;
+                    cursor: pointer;
                     margin-bottom: 6px;
                     margin-left: auto;
-                    margin-right: 15px
+                    margin-right: 15px;
+
+                    &.open {
+                        img {
+                           transform: rotate(180deg);
+                        }
+                    }
                 }
             }
             .inner_sections {
+                overflow: hidden;
+                height: 0;
+                opacity: 0;
+                transition: height 0.4s ease, opacity 0.4s ease;
+
+                &.open {
+                opacity: 1;
+                }
 
                 .first_section {
                     display: flex;
@@ -285,7 +301,7 @@
             }
         }
         .senior_level {
-            margin-top: 40px;
+            margin-top: 18px;
             .senior_level_title {
                 display: flex;
                 align-items: center;
@@ -326,7 +342,8 @@
                     border: none;
                     margin-bottom: 6px;
                     margin-left: auto;
-                    margin-right: 15px
+                    margin-right: 15px;
+                    cursor: not-allowed;
                 }
             }
         }
@@ -372,7 +389,8 @@
                     border: none;
                     margin-bottom: 6px;
                     margin-left: auto;
-                    margin-right: 15px
+                    margin-right: 15px;
+                    cursor: not-allowed;
                 }
             }
         }
