--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@
     position: relative;
     background: linear-gradient(90deg, #022335 0%, #043A41 100%);
     padding-top: 65px;
-    padding-bottom: 65px;
+    padding-bottom: 63px;
     &::before {
         content: '';
         position: absolute;
@@ -36,11 +36,14 @@
                         img {
                             padding-right: 10px;
                         }
-                        a {
-                            display: block;
-                            font-size: 18;
-                            font-weight: 500;
-                            color: $turquoise;
+                        .link_mail {
+                            padding-top: 2px;
+                            border-bottom: 1px solid $turquoise;
+                            a {
+                               font-size: 18;
+                               font-weight: 500;
+                               color: $turquoise;
+                        }
                         }
                     }
                     .footer_phone {
@@ -50,9 +53,71 @@
                         img {
                             padding-right: 5px;
                         }
+                        a {
+                            font-size: 18;
+                            font-weight: 500;
+                            color: $white;
+                        }
+                    }
+                }
+                .footer_social {
+                    display: flex;
+                    margin-top: 40px;
+                    align-items: center;
+                    justify-content: right;
+
+                    h3 {
+                        font-weight: 600;
+                        color: $gray;
+                        font-size: 10px;
+                        letter-spacing: 2.5px;
+                        text-transform: uppercase;
+                        margin-right: 14px;
+                    }
+                    a {
+                        padding-right: 16px;
+                        cursor: pointer;
+                        transition: all 1s;
+
+                        &:hover {
+                            transition: all 1s;
+                            transform: translateY(-5px);
+
+                        }
+                        &:last-child {
+                            margin-right: 0px;
+                        }
                     }
                 }
             }
+        }
+    }
+    .footer_copyright {
+        display: flex;
+        margin-top: 47px;
+        align-items: center;
+        .first_line {
+            width: 37%;
+            height: 1px;
+            background-color: #00E0FF;
+            opacity: 0.2;
+        }
+        .copyright {
+            width: 23%;
+            margin: 0 auto;
+            font-size: 14px;
+            font-weight: 500;
+            padding-left: 5px;
+            background: linear-gradient(to bottom, #FFFFFF 66%, #696868 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+
+        }
+        .second_line {
+            width: 37%;
+            height: 1px;
+            background-color: #00E0FF;
+            opacity: 0.2;
         }
     }
 }
