feat: media 1200px

--- a/scss/_header_block.scss
+++ b/scss/_header_block.scss
@@ -3,10 +3,10 @@ header {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 1005px;
+    height: 100%;
 
     position: relative;
-    padding-bottom: 10px;
+    padding-bottom: 172px;
     padding-top: 10px;
 
     &::before {
