--- a/scss/_reasons_block.scss
+++ b/scss/_reasons_block.scss
@@ -1,9 +1,9 @@
 .reasons {
     background: linear-gradient(to right, #022335 0%, #0C373D 100%);
     padding-top: 125px;
-    height: 881px;
+    height: 100%;
     position: relative;
-    padding-bottom: 10px;
+    padding-bottom: 121px;
 
 
     &::before {
