--- a/scss/_important_block.scss
+++ b/scss/_important_block.scss
@@ -1,6 +1,7 @@
 .important {
     position: relative;
     background: linear-gradient(to right, #022335 0%, #0C373D 100%);
+    height: 100%;
     padding-top: 105px;
     padding-bottom: 129px;
 
