--- a/scss/_intellegence_block.scss
+++ b/scss/_intellegence_block.scss
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 100%;
     padding-top: 117px;
     padding-bottom: 109px;
 
