--- a/scss/_learning_block.scss
+++ b/scss/_learning_block.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 100%;
     padding-bottom: 112px;
     padding-top: 105px;
 
