--- a/scss/_school_announcements.scss
+++ b/scss/_school_announcements.scss
@@ -80,7 +80,7 @@
                     will-change: transform;
                 .card {
                     position: relative;
-                    flex: 0 0 calc(100% / 3);
+                    flex: 0 0 auto;
 
                     &:last-child {
                         margin-right: 0;
@@ -121,6 +121,7 @@
                     button {
                         border: none;
                         background-color: transparent;
+                        padding-top: 10px;
                         font-weight: 500;
                         font-size: 12px;
                         color: $turquoise;
