--- a/scss/_vacancies.scss
+++ b/scss/_vacancies.scss
@@ -58,14 +58,13 @@
                 box-sizing: border-box;
                 .cards_container {
                     display: flex;
+                    gap: 20px;
                     max-width: 1200px;
                     transition: transform 0.5s ease;
                     will-change: transform;
                 .card {
                     position: relative;
-                    width: 387px;
-                    flex: 0 0 387px;
-                    margin-right: 20px;
+                    flex: 0 0 auto;
 
                     &:last-child {
                         margin-right: 0;
